Can Display Random Pokemon Names from API

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,6 +12,11 @@
 
 <body>
     <h1>Pokemon!</h1>
+    <button onclick="getPokemonData()">Get Pokemon!</button>
+    <img>
+        <p id="myPokemonName"></p>
+        <img id="myPokemonImg" src=""></img>
+    </div>
 </body>
 
 </html>
