displaying correct pokemon sprite
had to differntiate name number from image number due to JSON format (number 1 pokemon is 0 index in JSON)

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -16,7 +16,8 @@
     <img>
         <p id="myPokemonName"></p>
         <img id="myPokemonImg" src=""></img>
-    </div>
+        <p id="next"></p>
+</div>
 </body>
 
 </html>
