--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}" />
-    <script defer type="text/javascript" src="{{ url_for('static', filename='script.js')}}"></script>
-    <title>Document</title>
-</head>
-
-<body>
+{%extends "layout.html"%}{%block body%}
     <form action="/create/user" method="post">
         <Label for="first_name">First Name:<input type="text" name="first_name" required></Label>
         <Label for="last_name">Last Name:<input type="text" name="last_name" required></Label>
@@ -31,6 +19,4 @@
         <img id="myPokemonImg" src=""></img>
         <p id="next"></p>
 </div>
-</body>
-
-</html>
+{% endblock %}
