added layout extension to search page

--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}" />
-    <script defer type="text/javascript" src="{{ url_for('static', filename='script.js')}}"></script>
-    <title>Document</title>
-</head>
-
-<body>
+{%extends "layout.html"%}{%block body%}
     <h1>Pokemon!</h1>
     <h2>Search Page</h2>
     <div>
@@ -20,6 +8,4 @@
         <img id="myPokemonImg" src=""></img>
         <p id="next"></p>
     </div>
-</body>
-
-</html>
+    {% endblock %}
