--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}" />
+    <script defer type="text/javascript" src="{{ url_for('static', filename='script.js')}}"></script>
     <title>Layout</title>
 </head>
+
 <body>
     <p> Header Place Holder</p>
     {%if session%}
@@ -15,4 +19,5 @@
     <a href="/logout">Log Out</a>
     {% block body %}{% endblock %}
 </body>
+
 </html>
