Good pngs for header found
need to iron out hover effects

--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -11,7 +11,22 @@
 </head>
 
 <body>
-    <p> Header Place Holder</p>
+    <div class="header_wrapper">
+        <div class="header_option_wrapper">
+            <h3>Check Pokedex</h3>
+            <a href="/">
+                <img class="header_option" src="{{ url_for('static', filename='assets/pokedex.png')}}" >
+            </a>
+        </div>
+        <img class="header_logo" src="{{ url_for('static', filename='assets/pokemon_logo.png')}}" alt="Pokemon Logo">
+        <div class="header_option_wrapper">
+            <h3>Catch Pokemon</h3>
+            <a href="/">
+                <img class="header_option" src="{{ url_for('static', filename='assets/pokeball.png')}}" >
+            </a>
+        </div>
+        
+    </div>
     {%if session%}
     <h2>Welcome {{session.first_name}}</h2>
     {%endif%}
