--- a/flask_app/static/style.css
+++ b/flask_app/static/style.css
@@ -1,3 +1,34 @@
 h1{
     color: red;
 }
+.header_option_wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.header_option_wrapper>h3{
+    color: white;
+    font-size: 10%;
+    transition: color 2s font-size 2s;
+
+}
+.header_option_wrapper:hover>h3{
+    display: inline;
+    font-size: 150%;
+    color: black;
+}
+
+.header_wrapper{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.header_logo{
+    background-color: white;
+    height:15vh;
+}
+.header_option{
+    background-color: white;
+    width:8vh;
+}
