links on header options work

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -12,11 +12,11 @@
         <Label for="password">Password:<input type="password" name="password" placeholder="Password1?" required></Label>
         <input type="submit" name="submit" class="btn btn1" />
     </form>
-    <h1>Pokemon!</h1>
+    <!-- <h1>Pokemon!</h1>
     <button onclick="getPokemonData()">Get Pokemon!</button>
     <img>
         <p id="myPokemonName"></p>
         <img id="myPokemonImg" src=""></img>
-        <p id="next"></p>
+        <p id="next"></p> -->
 </div>
 {% endblock %}
