--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -14,14 +14,14 @@
     <div class="header_wrapper">
         <div class="header_option_wrapper">
             <h3>Check Pokedex</h3>
-            <a href="/">
+            <a href="/pokedex">
                 <img class="header_option" src="{{ url_for('static', filename='assets/pokedex.png')}}">
             </a>
         </div>
         <img class="header_logo" src="{{ url_for('static', filename='assets/pokemon_logo.png')}}" alt="Pokemon Logo">
         <div class="header_option_wrapper">
             <h3>Catch Pokemon</h3>
-            <a href="/">
+            <a href="/search/pokemon">
                 <img class="header_option" src="{{ url_for('static', filename='assets/pokeball.png')}}">
             </a>
         </div>
