--- a/flask_app/static/style.css
+++ b/flask_app/static/style.css
@@ -9,8 +9,7 @@ h1{
 }
 .header_option_wrapper>h3{
     opacity:0;
-    transition: opacity 1s;
-
+    transition: opacity .5s;
 }
 .header_option_wrapper:hover>h3{
     display: inline;
@@ -31,8 +30,8 @@ h1{
 .header_option{
     background-color: white;
     width:8vh;
-    transition:width 1s;
+    transition:width .5s;
 }
 .header_option_wrapper:hover>a>.header_option{
-    width:9vh;
+    width:8.5vh;
 }
