--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -12,20 +12,23 @@
 
 <body>
     <div class="header_wrapper">
+        {%if session%}
         <div class="header_option_wrapper">
             <h3>Check Pokedex</h3>
             <a href="/pokedex">
                 <img class="header_option" src="{{ url_for('static', filename='assets/pokedex.png')}}">
             </a>
         </div>
+        {%endif%}
         <img class="header_logo" src="{{ url_for('static', filename='assets/pokemon_logo.png')}}" alt="Pokemon Logo">
+        {%if session%}
         <div class="header_option_wrapper">
             <h3>Catch Pokemon</h3>
             <a href="/search/pokemon">
                 <img class="header_option" src="{{ url_for('static', filename='assets/pokeball.png')}}">
             </a>
         </div>
-
+        {%endif%}
     </div>
     {%if session%}
     <h2>Welcome {{session.first_name}}</h2>
