--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,17 +1,13 @@
 {%extends "layout.html"%}{%block body%}
-    <form action="/create/user" method="post">
-        <Label for="first_name">First Name:<input type="text" name="first_name" required></Label>
-        <Label for="last_name">Last Name:<input type="text" name="last_name" required></Label>
-        <Label for="email">Email adress:<input type="text" name="email" required></Label>
-        <Label for="password">Password:<input type="password" name="password" required></Label>
-        <Label for="passwordcheck">Confirm Password:<input type="password" name="passwordcheck" required></Label>
-        <input type="submit"value="Create User">
-    </form>
-    <form action="/login/user" method="post"> 
-        <Label for="email">Email adress:<input type="text" name="email" placeholder="emailed@e.com" required></Label>
-        <Label for="password">Password:<input type="password" name="password" placeholder="Password1?" required></Label>
-        <input type="submit" name="submit" class="btn btn1" />
-    </form>
+
+
+    <div>
+        <button onclick="returningTrainer()">Returning Trainer</button>
+        <button onclick="newTrainer()">New Trainer </button>
+    </div>
+    <div id="login_form"></div>
+    
+    
     <!-- <h1>Pokemon!</h1>
     <button onclick="getPokemonData()">Get Pokemon!</button>
     <img>
