--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -1,9 +1,9 @@
 {%extends "layout.html"%}{%block body%}
 
 
-    <div>
-        <button onclick="returningTrainer()">Returning Trainer</button>
-        <button onclick="newTrainer()">New Trainer </button>
+    <div class="login_button_container">
+        <button class="login_button digital_font" onclick="returningTrainer()">Returning Trainer</button>
+        <button class="login_button digital_font" onclick="newTrainer()">New Trainer </button>
     </div>
     <div id="login_form"></div>
     
