--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -2,8 +2,8 @@
 
 
     <div class="login_button_container">
-        <button class="login_button digital_font" onclick="returningTrainer()">Returning Trainer</button>
-        <button class="login_button digital_font" onclick="newTrainer()">New Trainer </button>
+        <button id="returnButton"class="login_button digital_font" onclick="returningTrainer()">Returning Trainer</button>
+        <button id="newButton"class="login_button digital_font" onclick="newTrainer()">New Trainer </button>
     </div>
     <div id="login_form"></div>
     
