--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -5,7 +5,7 @@
         <button onclick="getPokemonData()">Get Pokemon!</button>
         <img>
         <p id="myPokemonName"></p>
-        <img id="myPokemonImg" src=""></img>
+        <img class="pokemon_img"id="myPokemonImg" src=""></img>
         <p id="next"></p>
     </div>
     {% endblock %}
