--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -7,5 +7,10 @@
         <p id="myPokemonName"></p>
         <img class="pokemon_img"id="myPokemonImg" src=""></img>
         <p id="next"></p>
+        <div id="selections" class="selections" style="display:none">
+            <button class="selection" data-selection="rock">💧</button>
+            <button class="selection" data-selection="paper">🔥</button>
+            <button class="selection" data-selection="scissors">🌱</button>`
+        </div>
     </div>
     {% endblock %}
