--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -8,9 +8,9 @@
         <img class="pokemon_img"id="myPokemonImg" src=""></img>
         <p id="next"></p>
         <div id="selections" class="selections" style="display:none">
-            <button class="selection" data-selection="rock">💧</button>
-            <button class="selection" data-selection="paper">🔥</button>
-            <button class="selection" data-selection="scissors">🌱</button>`
+            <button class="selection" data-selection="water">💧</button>
+            <button class="selection" data-selection="fire">🔥</button>
+            <button class="selection" data-selection="grass">🌱</button>`
         </div>
     </div>
     {% endblock %}
