properly uppercased pokemon name

--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -7,10 +7,11 @@
         <p id="myPokemonName"></p>
         <img class="pokemon_img"id="myPokemonImg" src=""></img>
         <p id="next"></p>
-        <div id="selections" class="selections" style="display:none">
+        <div id="selections" class="selections" style="display:none;">
             <button class="selection" data-selection="water">💧</button>
             <button class="selection" data-selection="fire">🔥</button>
             <button class="selection" data-selection="grass">🌱</button>`
         </div>
     </div>
+    <div id=results class="results"></div>
     {% endblock %}
