--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -1,17 +1,17 @@
 {%extends "layout.html"%}{%block body%}
-    <h1>Pokemon!</h1>
-    <h2>Search Page</h2>
-    <div>
-        <button onclick="getPokemonData()">Get Pokemon!</button>
-        <img>
-        <p id="myPokemonName"></p>
-        <img class="pokemon_img"id="myPokemonImg" src=""></img>
-        <p id="next"></p>
-        <div id="selections" class="selections" style="display:none;">
-            <button class="selection" data-selection="water">💧</button>
-            <button class="selection" data-selection="fire">🔥</button>
-            <button class="selection" data-selection="grass">🌱</button>`
-        </div>
+
+<div class="search_body">
+    <h1>Cacth some Pokemon!</h1>
+    <button onclick="getPokemonData()">Get Pokemon!</button>
+    <img>
+    <p id="myPokemonName"></p>
+    <img class="pokemon_img" id="myPokemonImg" src=""></img>
+    <p id="next"></p>
+    <div id="selections" class="selections" style="display:none;">
+        <button class="selection" data-selection="water">💧</button>
+        <button class="selection" data-selection="fire">🔥</button>
+        <button class="selection" data-selection="grass">🌱</button>`
     </div>
-    <div id=results class="results"></div>
-    {% endblock %}
+</div>
+<div id=results class="results"></div>
+{% endblock %}
