pokemon name form working properly
preparing SQL query logic for new pokemon vs new relationship of pokemon

--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -14,4 +14,6 @@
     </div>
 </div>
 <div id=results class="results"></div>
+<div id="new_pokemon_form" class="new_pokemon_form">
+</div>
 {% endblock %}
