added some NES features
NES MOUSE and pokemon becomes pokeball when caught

--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -9,6 +9,7 @@
     <script defer type="text/javascript" src="{{ url_for('static', filename='script.js')}}"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Layout</title>
 </head>
