--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -6,6 +6,7 @@
     <img>
     <p id="myPokemonName"></p>
     <img class="pokemon_img" id="myPokemonImg" src=""></img>
+    <div id="caughtPokeball"></div>
     <p id="next"></p>
     <button onclick="getPokemonData()">Get Pokemon!</button>
     <div id="selections" class="selections" style="display:none;">
