--- a/flask_app/static/style.css
+++ b/flask_app/static/style.css
@@ -54,14 +54,14 @@ h1{
     justify-content: space-around;
 }
 .login_button{
-    height:20vw;
-    width:20vw;
+    height:20vh;
+    width:20vh;
     background-image:linear-gradient(to bottom left,red,white);
     border-radius: 50%;
     border: none;
     
     cursor: pointer;
-    font-size: 2vw;
+    font-size: 2vh;
     box-shadow: none;
     transition: box-shadow .75s;
 }
@@ -70,7 +70,7 @@ h1{
 }
 
 .login_button:hover{
-    box-shadow:5px -5px 20px gray;
+    box-shadow:0px 0px 20px darkgoldenrod;
     /* background-image:linear-gradient(to bottom left,white,red); */
     /* height:21vw;
     width:21vw; */
