--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -1,7 +1,8 @@
 {%extends "layout.html"%}{%block body%}
 
 <div class="search_body">
-    <h1>Cacth some Pokemon!</h1>
+    <h1>Catch some Pokemon!</h1>
+    
     
     <img>
     <p id="myPokemonName"></p>
