added flash messages for logging in and registering, can pull all caught pokemon from Database

--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -45,6 +45,15 @@
 
     <a href='/'>Home</a>
     <a href="/logout">Log Out</a>
+    {% with messages = get_flashed_messages() %}
+      <!-- declare a variable called messages -->
+      {% if messages %}
+      <!-- check if there are any messages -->
+      {% for message in messages %}
+      <!-- loop through the messages -->
+      <li>{{message}}</li>
+      <!-- display each message in a paragraph tag -->
+      {% endfor %} {% endif %} {% endwith %}
     {% block body %}{% endblock %}
 </body>
 
