--- a/flask_app/templates/pokedex.html
+++ b/flask_app/templates/pokedex.html
@@ -11,4 +11,8 @@
     </label>
     <input class="nes-btn" type="submit" value="Go!">
 </form>
+
+{%if pokemon_list%}
+{{pokemon_list}}
+{%endif%}
 {% endblock %}
