New Pokemon Bug Fixed
removed ablitity for user to search for new pokemon while naming new catch

--- a/flask_app/templates/search.html
+++ b/flask_app/templates/search.html
@@ -3,13 +3,13 @@
 <div class="search_body">
     <h1>Catch some Pokemon!</h1>
     
-    
+
     <img>
     <p id="myPokemonName"></p>
     <img class="pokemon_img" id="myPokemonImg" src=""></img>
     <div id="caughtPokeball"></div>
     <p id="next"></p>
-    <button onclick="getPokemonData()">Get Pokemon!</button>
+    <button id="getPokemonButton" onclick="getPokemonData()">Get Pokemon!</button>
     <div id="selections" class="selections" style="display:none;">
         <button class="selection" data-selection="water">💧</button>
         <button class="selection" data-selection="fire">🔥</button>
